Fix problems caused by absolute positioning: Add z-index to header

--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ body {
   background-color: rgb(var(--color-primary-500));
   color: rgb(var(--color-white));
   box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
-    rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;
+              rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;
+  z-index: 1;
 }
 
 .header .header__title {
